--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 19 Aug 2004
   Last Modified: 26 July 2006
   Number: 4
-  Version: 30
+  Version: 31
 
 This document summarizes Apocalypse 4, which covers the block and
 statement syntax of Perl.
@@ -488,7 +488,7 @@ your own C<CATCH> block.
 
 A C<return> always exits from the lexically surrounding sub
 or method definition (that is, from a function officially declared
-with the C<sub>, C<method>, or C<submethod> keywords).  Pointy subs
+with the C<sub>, C<method>, or C<submethod> keywords).  Pointy blocks
 and bare closures are transparent to C<return>.  If you pass a closure
 object outside of its official "sub" scope, it is illegal to
 return from it.  You may only leave the closure block itself with C<leave>
