* S02 and S06: Markus Laire noted that "piping" shouldn't   exist anymore without "pipe operators".
git-svn-id: http://svn.pugscode.org/pugs@23506 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -572,7 +572,7 @@ A variant of C<*> is the C<**> term.  It is generally understood to
 be a multidimension form of C<*> when that makes sense.
 
 The C<***> variant serves as the insertion point of a list of feeds.
-That insertion point may be targeted by piping to C<*>.  See S06.
+That insertion point may be targeted by sending a feed into C<*>.  See S06.
 
 Other uses for C<*> will doubtless suggest themselves over time.  These
 can be given meaning via the MMD system, if not the compiler.  In general
